Configure check_website to cancel in-progress runs.
This is necessary since the check_binary_checksums job will fail if dl.elv.sh
hosts the build from a newer commit.

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   check_freshness:
     name: Check freshness
