--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -20,20 +20,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Compare timestamp
+      timeout-minutes: 30
       run: |
         ts=$(git show -s --format=%ct HEAD)
-        for i in `seq 30`; do
+        wait=3
+        while true; do
           website_ts=$(curl -sS https://${{ matrix.host }}.elv.sh/commit-ts.txt)
-          if test "$website_ts" -ge "$ts"; then
+          if test -z "$website_ts"; then
+            echo "website has no commit.ts yet"
+          elif test "$website_ts" -ge "$ts"; then
             echo "website ($website_ts) >= current ($ts)"
             exit 0
           else
             echo "website ($website_ts) < current ($ts)"
           fi
-          sleep 60
+          sleep $wait
+          test $wait -lt 96 && wait=`echo "$wait * 2" | bc`
         done
-        echo "Timeout"
-        exit 1
 
   build_binaries:
     name: Build binaries
