Small tweaks to check_website.

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -23,11 +23,11 @@ jobs:
       timeout-minutes: 30
       run: |
         ts=$(git show -s --format=%ct HEAD)
-        wait=3
+        wait=10
         while true; do
           website_ts=$(curl -sS https://${{ matrix.host }}.elv.sh/commit-ts.txt)
           if test -z "$website_ts"; then
-            echo "website has no commit.ts yet"
+            echo "website has no commit-ts.txt yet"
           elif test "$website_ts" -ge "$ts"; then
             echo "website ($website_ts) >= current ($ts)"
             exit 0
