--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -55,7 +55,9 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        # Keep this in sync with
+        # https://github.com/elves/up/blob/master/Dockerfile
+        go-version: 1.18.2
     - name: Build binaries
       run: ELVISH_BUILD_VARIANT=official ./tools/buildall.sh . ~/elvish-bin HEAD
     - name: Upload binaries
