Improve race condition handling of the check_website workflow.
Using cancel-in-progress will cause the workflow to fail, which is not
desirable. Instead, use the GitHub API to fetch the SHA of the latest commit,
and suppress the error from check_binary_checksums if it doesn't match the SHA
of the triggering commit.

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - master
 
-concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: true
-
 jobs:
   check_freshness:
     name: Check freshness
@@ -98,4 +94,11 @@ jobs:
             ret=1
           fi
         done
+        if test $ret != 0; then
+          latest_sha=$(curl -sS -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' -H 'Accept: application/vnd.github.VERSION.sha' https://api.github.com/repos/elves/elvish/commits/master/)
+          if test ${{ github.sha }} != "$latest_sha"; then
+            echo "Ignoring the mismatch since there is a newer commit now"
+            ret=0
+          fi
+        fi
         exit $ret
