Only run check_freshness job for the elves/elvish repo.
Pushes to forks will not trigger website updates.

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   check_freshness:
     name: Check freshness
+    if: github.repository == 'elves/elvish'
     runs-on: ubuntu-latest
     strategy:
       matrix:
