--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,7 +193,7 @@ jobs:
       with:
         go-version: 1.18.x
     - name: Set up staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@master
+      run: go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
     - name: Run linters
       run: ./tools/lint.sh
 
