website: Add make rule for generating ttyshot.

--- a/website/Makefile
+++ b/website/Makefile
@@ -29,8 +29,8 @@ check-rellinks: gen
 clean:
 	rm -rf tools/*.bin $(HTMLS) $(DST_DIR) $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
 
-ttyshot/%.html:
-	@echo Exclude ttyshots from the pattern rule for %.html
+ttyshot/%.html: ttyshot/%.spec tools/ttyshot.bin
+	tools/ttyshot.bin $<
 
 .PHONY: gen docset publish check-rellinks clean
 
