website/cmd/ttyshot: Take output and raw file paths as flags.
- Move the output writing to the end. This avoids putting the output file in a
  truncated state while the ttyshot process is running.

- Don't save raw output of capture-pane unless the -save-raw flag is given.

--- a/website/ttyshot/Makefile
+++ b/website/ttyshot/Makefile
@@ -4,7 +4,7 @@ HTMLS := $(SPECS:.spec=.html)
 all: $(HTMLS)
 
 %.html: %.spec ../tools/ttyshot.bin
-	../tools/ttyshot.bin $<
+	../tools/ttyshot.bin -o $@ $<
 
 .PHONY: all
 
