Add new runtime module.
This module provides $runtime:{lib-dirs rc-path effective-rc-path}. It will
likely grow in future.

This fixes #1385.

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -57,6 +57,10 @@ name = "readline-binding"
 title = "readline-binding: Readline-like Key Bindings"
 
 [[articles]]
+name = "runtime"
+title = "runtime: Information About the Elvish Runtime"
+
+[[articles]]
 name = "store"
 title = "store: API for the Elvish Persistent Data Store"
 
