.github: Bump Go to 1.19.x.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,15 +16,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
-        go-version: [1.18.x]
-        # We usually support building Elvish with Go 1.N-1 too, but since Go
-        # 1.18 brought a lot of improvements, we dropped support for Go 1.17
-        # when Go 1.18 is released. When Go 1.19 is released, uncomment the
-        # stanza below to test on Go 1.18 too.
-        #include:
-        #  # Test old supported Go version
-        #  - os: ubuntu
-        #    go-version: 1.18.x
+        go-version: [1.19.x]
+        include:
+          # Test old supported Go version
+          - os: ubuntu
+            go-version: 1.18.x
     env:
       ELVISH_TEST_TIME_SCALE: 20
     runs-on: ${{ matrix.os }}-latest
@@ -59,10 +55,10 @@ jobs:
       if: matrix.os == 'ubuntu'
       run: echo ostype=linux >> $GITHUB_ENV
     - name: Generate test coverage
-      if: matrix.go-version == '1.18.x'
+      if: matrix.go-version == '1.19.x'
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
-      if: matrix.go-version == '1.18.x'
+      if: matrix.go-version == '1.19.x'
       uses: actions/upload-artifact@v2
       with:
         name: cover-${{ env.ostype }}
@@ -80,7 +76,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        go-version: 1.19.x
     - name: Run benchmarks
       run: go test -bench=. -run='^$' ./...
 
@@ -113,7 +109,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        go-version: 1.19.x
     - name: Set up goimports
       run: go install golang.org/x/tools/cmd/goimports@latest
     - name: Check style
@@ -191,7 +187,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        go-version: 1.19.x
     - name: Set up staticcheck
       run: go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
     - name: Run linters
