website: Make ttyshots look like transcripts.
This further simplifies the op structure - only code input and tmux commands are
necessary now; waiting for prompts is now implicit.

--- a/website/Makefile
+++ b/website/Makefile
@@ -31,7 +31,7 @@ clean:
 
 ifdef TTYSHOT
 %.ttyshot.html: %.ttyshot tools/ttyshot.bin
-	tools/ttyshot.bin -o $@ $<
+	tools/ttyshot.bin $(if $(findstring verbose,$(TTYSHOT)),-v,) -o $@ $<
 else
 %.ttyshot.html:
 	@: ttyshot generation disabled by default
