--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "elvish",
     "displayName": "Elvish",
     "description": "Elvish language support for Visual Studio Code",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "publisher": "elves",
     "license": "BSD-2-Clause",
     "icon": "icon.png",
@@ -42,6 +42,12 @@
                 "extensions": [
                     ".ttyshot"
                 ]
+            },
+            {
+                "id": "elvish-in-markdown",
+                "aliases": [
+                    "Elvish in Markdown"
+                ]
             }
         ],
         "grammars": [
@@ -59,6 +65,7 @@
                 }
             },
             {
+                "language": "elvish-in-markdown",
                 "scopeName": "source.elvish.in.markdown",
                 "path": "./syntaxes/elvish-in-markdown.tmLanguage.json",
                 "injectTo": [
