--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
-ignore-words-list = upto,nd,ba,doas,fo,struc,shouldbe,iterm,lates,testof
+ignore-words-list = upto,nd,ba,bu,doas,fo,struc,shouldbe,iterm,lates,testof
 skip = ./vscode/node_modules,./vscode/dist
