cmd/elvmdfmt: Split Markdown formatting into own command, supporting -w and -d.
Also change the behavior of the rendering command (elvmd) to still output HTML
when given -trace.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -20,5 +20,6 @@ ignore:
   - "pkg/getopt/zstring.go"
   - "pkg/md/zstring.go"
   - "pkg/parse/zstring.go"
-  # Exclude the copied rpc package.
+  # Exclude the copied diff and rpc packages.
+  - "pkg/diff"
   - "pkg/rpc"
