Simplify the check-rellinks CI check.
Pandoc is no longer required, so no need to use the custom elvish-up image.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,22 +153,17 @@ jobs:
   check-rellinks:
     name: Check relative links
     runs-on: ubuntu-latest
-    container:
-      image: theelves/up
-      # Git commands (invoked by Go when stamping VCS info) can fail
-      # if the running user is not the same as the owner of .git
-      # (https://github.blog/2022-04-12-git-security-vulnerability-announced/).
-      #
-      # The checkout action uses UID 1001, so use that for the container too.
-      options: --user 1001
-    defaults:
-      run:
-        shell: sh
-    env:
-      CGO_ENABLED: 0
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.19.x
+    - name: Set up Python
+      uses: actions/setup-python@v4
+    - name: Install Python dependency
+      run: pip3 install beautifulsoup4
     - name: Check relative links
       run: make -C website check-rellinks
 
