.cirrus.yml: Add task to test on NetBSD.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,6 +37,18 @@ test_task:
           pkg install -y curl
           curl -L -o go.tar.gz https://go.dev/dl/go$GO_VERSION.freebsd-amd64.tar.gz
           tar -C /usr/local -xf go.tar.gz
+    - name: Test on NetBSD
+      compute_engine_instance:
+        image_project: pg-ci-images
+        image: family/pg-ci-netbsd-vanilla
+        platform: netbsd
+      env:
+        GO_PKG: go118
+        PATH: /usr/pkg/$GOPKG/bin:$PATH
+      go_pkg_cache:
+        fingerprint_key: $GO_PKG
+        folder: /usr/pkg/$GO_PKG
+        populate_script: pkgin -y install $GO_PKG
   go_version_script: go version
   test_script: go test $TEST_FLAG ./...
 
