--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,6 +149,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.19.x
+    - name: Install go-stringer
+      run: go install golang.org/x/tools/cmd/stringer@latest
     - name: Run check-content.sh
       run: ./tools/check-content.sh
 
