--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -62,6 +62,7 @@ jobs:
       with:
         name: bin
         path: ~/elvish-bin/**/*
+        retention-days: 7
     - name: Upload binary checksums
       uses: actions/upload-artifact@v3
       with:
