Add a doc: module for accessing documentation of Elvish modules.
This fixes #1432.

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -21,6 +21,10 @@ name = "builtin"
 title = "Builtin Functions and Variables"
 
 [[articles]]
+name = "doc"
+title = "doc: Documentation of Elvish modules"
+
+[[articles]]
 name = "edit"
 title = "edit: API for the Interactive Editor"
 
