--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,8 +100,8 @@ jobs:
         files: ./cover
         flags: ${{ matrix.ostype }}
 
-  checkstyle-go:
-    name: Check style of **.go
+  checks:
+    name: Run checks
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -110,59 +110,17 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19.x
-    - name: Set up goimports
+    - name: Install goimports
       run: go install golang.org/x/tools/cmd/goimports@latest
-    - name: Check style
-      run: ./tools/checkstyle-go.sh
-
-  checkstyle-md:
-    name: Check style of **.md
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19.x
-    - name: Check style
-      run: ./tools/checkstyle-md.sh
-
-  codespell:
-    name: Check spelling
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
     - name: Install codespell
       run: pip install codespell==2.2.1
-    - name: Run codespell
-      run: codespell
-
-  check-disallowed:
-    name: Check disallowed code
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Run check-disallowed.sh
-      run: ./tools/check-disallowed.sh
-
-  check-gen:
-    name: Check generated code
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Run check-gen.sh
-      run: ./tools/check-gen.sh
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
+    - name: Run checks
+      run: make all-checks
 
   check-rellinks:
-    name: Check relative links
+    name: Check relative links in website
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -179,21 +137,6 @@ jobs:
       run: pip3 install beautifulsoup4
     - name: Check relative links
       run: make -C website check-rellinks
-
-  lint:
-    name: Run linters
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19.x
-    - name: Set up staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
-    - name: Run linters
-      run: ./tools/lint.sh
 
   lsif:
     name: Upload SourceGraph LSIF
