--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,12 +110,16 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19.x
-    - name: Install goimports
-      run: go install golang.org/x/tools/cmd/goimports@latest
-    - name: Install codespell
-      run: pip install codespell==2.2.1
-    - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+    - name: Install tools
+      run: |
+        go install golang.org/x/tools/cmd/stringer@latest
+        go install golang.org/x/tools/cmd/goimports@latest
+        go install honnef.co/go/tools/cmd/staticcheck@v0.3.2
+        pip install --user codespell==2.2.1
     - name: Run checks
       run: make all-checks
 
