website: Integrate cmd/elvdoc into cmd/macros.

--- a/website/Makefile
+++ b/website/Makefile
@@ -45,5 +45,5 @@ endif
 tools/%.bin: cmd/% $$(wildcard cmd/%/*)
 	go build -o $@ ./$<
 
-%.html: %.md tools/macros.bin tools/elvdoc.bin tools/md2html.bin $$(shell tools/extra-deps $$@)
-	tools/macros.bin -elvdoc tools/elvdoc.bin < $< | tools/md2html.bin > $@
+%.html: %.md tools/macros.bin tools/md2html.bin $$(shell tools/extra-deps $$@)
+	tools/macros.bin < $< | tools/md2html.bin > $@
